@@ -7,9 +7,11 @@ INCLUDES =                                              \
         -DLUNAR_HOLIDAYDIR=\""$(datadir)/liblunar/"\"     \
 	$(NULL)
 
-noinst_PROGRAMS =			\
-        test-date			\
-	test-calendar
+noinst_PROGRAMS =test-date
+
+if ENABLE_GTK
+noinst_PROGRAMS += test-calendar
+endif
 
 test_date_SOURCES =          		\
         test-date.c
